# gpuq

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DECISIONS.md  LICENSE  README.md  WORKING_NOTES.md  pyproject.toml  vulture_whitelist.py
docs/superpowers/plans/: 2026-05-04-gpuq.md
docs/superpowers/specs/: 2026-05-04-gpuq-design.md
scripts/: committer  gpuq.service
src/gpuq/: __init__.py  cli.py  ids.py  lease.py  logs.py  ollama.py  paths.py  protocol.py  state.py
src/gpuq/daemon/: main.py  queue.py  runner.py  server.py
tests/: conftest.py  test_cli.py  test_doctor.py  test_ids.py  test_lease.py  test_logs.py  test_ollama.py  test_paths.py  test_protocol.py  test_prune.py  test_queue.py  test_retry.py  test_runner.py  test_server.py  test_state.py
