[project]
name = "gpuq"
version = "0.1.0"
description = "GPU job scheduler — queue, run, and de-conflict torch / comfyui / ollama jobs on a single GPU"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pre-commit>=3.0",
  "pytest>=8.0",
  "ruff>=0.6",
  "ty",
  "vulture>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpuq"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ARG"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
  "slow: takes > 30s",
  "integration: hits real external services",
  "gpu: requires CUDA / GPU access",
]

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 80
